# fyra

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  aarch64_test_exec  arith2_linux  cmake_install.cmake  fib6_linux  fib_windows.s  fibonacci.wat  functions.s  fyra.sln  fyra.vcxproj  fyra.vcxproj.filters  main.cpp  simple.fyra  simple.wasm  simple.wat  simple_aarch64.s  simple_linux.s  simple_riscv64.s  simple_wasm32.wat  simple_windows.s  sqlite_clone_exec  sqlite_linux  test.sh  windows_debug.s  windows_linux
.cache/clangd/index/: AArch64.cpp.C402D9106387A3BF.idx  AArch64.h.23179EFBFAD8FBAE.idx  ABIAnalysis.h.539E2AE9A9CE53D2.idx  ASMValidator.cpp.3F5515FF990D0166.idx  ASMValidator.h.A7C517F2324724BA.idx  BasicBlock.cpp.411602672825C529.idx  BasicBlock.h.50992AC2511D086F.idx  CFGBuilder.cpp.F4F2668BA8A3B30A.idx  CFGBuilder.h.8F9EE5170468AEA7.idx  CodeGen.cpp.CBD13FE4FADDDD5B.idx  CodeGen.h.16EAC83E738F8D9D.idx  Constant.cpp.DB1591B06C12EBDB.idx  Constant.h.56FC67DA9AC6AC19.idx  ControlFlowSimplification.cpp.42EFF7238E1157C0.idx  ControlFlowSimplification.h.202E4D1CC876BDE7.idx  CopyElimination.cpp.46B73435FE049F75.idx  CopyElimination.h.65541D1E4A0658DF.idx  DeadInstructionElimination.cpp.859B36A0707974DC.idx  DeadInstructionElimination.h.119EF808E4CD36FC.idx  DominanceFrontier.cpp.BD16FD3005B1C3B9.idx  DominanceFrontier.h.340FFFC0AC83F143.idx  DominatorTree.cpp.0FE87596B6C42058.idx  DominatorTree.h.3E4013D6F59B3389.idx  EnhancedCodeGen.cpp.A9AA626152B905DB.idx  EnhancedCodeGen.h.0DCDD0DCF26EA910.idx  ErrorReporter.h.00FA1B77069DFEF8.idx  Function.cpp.67D0E05D6DDBB3DA.idx  Function.h.C4F008EDA4163518.idx  GVN.cpp.708BA7CB4EFFAD0A.idx  GVN.h.8C83898A46D2F553.idx  GlobalValue.h.BD306C8C7394A0E0.idx  GlobalVariable.cpp.0FA9D22F06E6B64D.idx  GlobalVariable.h.09C0065A9E554598.idx  IRBuilder.cpp.BE25827E13212F1E.idx  IRBuilder.h.838AE179EB279521.idx  Instruction.cpp.043CD46584266C43.idx  Instruction.h.09E84C0BA5B78276.idx  Lexer.cpp.19E1EDDE7F8BCCDF.idx  Lexer.h.EAC0F4C8FA0EB0FF.idx  LinearScanAllocator.cpp.94B39FABAA91C17B.idx  (+86 more)
doc/: AI.md  api_reference.md  architecture.md  capabilities.md  codegen_optimizations.md  comparison.md  extending_compiler.md  fyra_il.md  getting_started.md  ir_builder.md  optimization_roadmap.md  reference.md  syscalls.md  target_differences.md
examples/: CMakeLists.txt  README.md  phpish_oop_inmemory.cpp
include/codegen/: CodeGen.h  EnhancedCodeGen.h  InstructionFusion.h
include/codegen/abi/: ABIAnalysis.h
include/codegen/asm/: Assembler.h
include/codegen/debug/: DWARFGenerator.h
include/codegen/objectgen/: ObjectFileGenerator.h  PlatformGenerators.h
include/codegen/optimize/: InstructionFusion.h
include/codegen/profiling/: RuntimeProfiler.h
include/codegen/regalloc/: LiveIntervalAnalysis.h
include/codegen/validation/: ASMValidator.h  TargetABIRegistry.h  ValidationTypes.h
include/ir/: Constant.h  Function.h  IRBuilder.h  IRContext.h  Instruction.h  Module.h  SIMDInstruction.h  Type.h  Value.h
include/parser/: Lexer.h  Parser.h
include/transforms/: ABIAnalysis.h  ControlFlowSimplification.h  DeadInstructionElimination.h  ErrorReporter.h  LoopInvariantCodeMotion.h  PassError.h  SCCP.h  TransformPass.h
src/codegen/: CMakeLists.txt  CodeGen.cpp  EnhancedCodeGen.cpp  InstructionFusion.cpp
src/codegen/abi/: ABIAnalysis.cpp
src/codegen/asm/: Assembler.cpp
src/codegen/debug/: DWARFGenerator.cpp  DebugInfoManager.cpp
src/codegen/execgen/: binary_writer.hh  elf.cpp  pe.cpp  platform_utils.cpp
src/codegen/objectgen/: ObjectFileGenerator.cpp  PlatformGenerators.cpp
src/codegen/optimize/: FusionCoordinator.cpp  InstructionFusion.cpp
src/codegen/profiling/: RuntimeProfiler.cpp
src/codegen/regalloc/: LinearScanAllocator.cpp  LiveIntervalAnalysis.cpp  LivenessAnalysis.cpp  RegAllocRewriter.cpp
src/codegen/validation/: ASMValidator.cpp  TargetABIRegistry.cpp
src/ir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  IRBuilder.cpp  IRContext.cpp  Instruction.cpp  Module.cpp  SIMDInstruction.cpp  Type.cpp  Use.cpp  User.cpp  Value.cpp
src/parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp
src/transforms/: ABIAnalysis.cpp  CMakeLists.txt  ControlFlowSimplification.cpp  DeadInstructionElimination.cpp  LinearScanAllocator.cpp  LoopInvariantCodeMotion.cpp  PhiInsertion.cpp  RegAllocRewriter.cpp  SCCP.cpp  SSARenamer.cpp
tests/: CMakeLists.txt  aarch64.fyra  add.fyra  arith2.fyra  benchmark_suite.fyra  capability_audit.fyra  comprehensive.fyra  control_flow.fyra  copy_elimination.fyra  crash.fyra  div.fyra  extern_http_sqlite_smoke.sh  fib6.fyra  fibonacci.fyra  fibonacci_wasm_test.cpp  float.fyra  frontend_test_matrix.md  functions.fyra  http_server.fyra  mul.fyra  non_trivial.fyra  riscv64.fyra  riscv_test.fyra  simple.fyra  simple_wasm_test.cpp  sqlite_clone.fyra  ssa.fyra  sub.fyra  target_api_syscall_audit.sh  test_aarch64.cpp  test_aarch64_capability_compliance.cpp  test_add.cpp  test_benchmark_suite.cpp  test_capabilities_all.fyra  test_capability_compliance.cpp  test_codegen.cpp  test_comprehensive.cpp  test_control_flow.cpp  test_copy_elimination.cpp  test_div.cpp  (+26 more)
tests/CodeGen/: wasm_inmemory_test.cpp
